--- a/app/src/main/res/layout/activity_players.xml
+++ b/app/src/main/res/layout/activity_players.xml
@@ -9,11 +9,12 @@
     android:background="@drawable/futbolpitch2">
 
     <TextView
+        android:id="@+id/textView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:background="@drawable/my_background7"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
         android:id="@+id/Logo"
@@ -41,65 +42,28 @@
         app:layout_constraintTop_toTopOf="@id/Logo"
         app:layout_constraintBottom_toBottomOf="@id/Logo"/>
 
-
-
-    <ScrollView
-        android:id="@+id/logged_players"
-        android:layout_width="300dp"
-        android:layout_height="wrap_content"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view_players"
+        android:layout_width="317dp"
+        android:layout_height="318dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintBottom_toTopOf="@+id/add_player_button"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/Logo"
-        android:layout_marginStart="50dp"
-        android:layout_marginTop="30dp"
-        >
-
-
-        <TableLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:stretchColumns="*">
-
-            <!-- Table Header Row -->
-            <TableRow>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/registered_players"
-                    android:textSize="18sp"
-                    android:fontFamily="@font/montserrat"
-                    android:textColor="@color/white"
-                    android:textStyle="bold"
-                    android:background="@drawable/underlined" />
-            </TableRow>
-
-            <!-- Table Rows -->
-            <TableRow>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text=""
-                    android:padding="5dp" />
-
-                <!-- Add more columns as needed -->
-            </TableRow>
-
-
-        </TableLayout>
-    </ScrollView>
+        app:layout_constraintTop_toBottomOf="@id/Logo" />
 
     <Button
         android:id="@+id/add_player_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="176dp"
+        android:layout_height="65dp"
+        android:layout_marginTop="50dp"
+        android:backgroundTint="@color/logoColor"
         android:text="@string/add_player"
         android:textColor="@color/white"
         android:textSize="16sp"
-        android:backgroundTint="@color/logoColor"
-
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/logged_players"
-        android:layout_marginEnd="50dp"
-        android:layout_marginTop="30dp"/>
-
-
+        app:layout_constraintHorizontal_bias="0.84"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/recycler_view_players" />
 </androidx.constraintlayout.widget.ConstraintLayout>
