--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -18,4 +18,5 @@
     <color name="yellow">#FFFF00</color>
     <color name="green">#00FF00</color>
     <color name="bg_2">#0C3454</color>
+    <color name="green_pitch">#589136</color>
 </resources>
