--- a/app/src/main/res/layout/player_row.xml
+++ b/app/src/main/res/layout/player_row.xml
@@ -1,25 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
 <TableRow xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:padding="8dp">
+    android:padding="2dp">
 
     <TextView
         android:id="@+id/player_name"
-        android:layout_width="0dp"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="18sp"
+        android:fontFamily="@font/montserrat_thin"
+        android:padding="2dp"
         android:textColor="@color/white"
-        android:padding="5dp" />
+        android:textSize="18sp" />
 
     <TextView
         android:id="@+id/player_position"
-        android:layout_width="0dp"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textSize="18sp"
+        android:fontFamily="@font/montserrat_thin"
+        android:padding="2dp"
         android:textColor="@color/white"
-        android:padding="5dp" />
+        android:textSize="18sp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/options"
+        android:layout_width="100dp"
+        android:layout_height="match_parent"
+        android:background="@color/ic_launcher_background"
+        android:backgroundTint="@color/transparente"
+        android:src="@drawable/baseline_more_vert_24"
+        android:tint="@color/white"
+        app:backgroundTint="@color/ic_launcher_background"
+        app:fabSize="mini" />
 </TableRow>
 
