--- a/app/src/main/res/layout/activity_players3.xml
+++ b/app/src/main/res/layout/activity_players3.xml
@@ -91,7 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="64dp"
+        android:layout_marginEnd="20dp"
         android:layout_marginTop="24dp"
         android:backgroundTint="@color/logoColor"
         android:enabled="true"
@@ -99,23 +99,39 @@
         android:text="Delete"
         android:textColor="@color/myBackgroundColor"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@id/add_button"
         app:layout_constraintTop_toBottomOf="@id/player_img_input" />
 
     <Button
+        android:id="@+id/add_button"
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:backgroundTint="@color/logoColor"
+        android:enabled="true"
+        android:fontFamily="@font/montserrat"
+        android:text="Add"
+        android:textColor="@color/myBackgroundColor"
+        android:textSize="18sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player_img_input"
+        app:layout_constraintEnd_toEndOf="parent"
+        />
+
+    <Button
         android:id="@+id/edit_button"
-        android:layout_width="wrap_content"
+        android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="24dp"
-        android:layout_marginEnd="56dp"
+        android:layout_marginStart="20dp"
         android:backgroundTint="@color/logoColor"
         android:enabled="true"
         android:fontFamily="@font/montserrat"
         android:text="Save"
         android:textColor="@color/myBackgroundColor"
         android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@id/add_button"
         app:layout_constraintTop_toBottomOf="@id/player_img_input" />
 
     <ImageView
