--- a/app/src/main/res/layout/activity_squad.xml
+++ b/app/src/main/res/layout/activity_squad.xml
@@ -55,6 +55,16 @@
         app:layout_constraintVertical_bias="0.91"
         />
 
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_GK"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/GK"
+        app:layout_constraintStart_toStartOf="@id/GK"
+        app:layout_constraintEnd_toEndOf="@id/GK"
+        />
+
     <ImageView
         android:id="@+id/DFC1"
         android:layout_width="83dp"
@@ -66,6 +76,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.76"
         app:layout_constraintHorizontal_bias="0.67"
+        />
+
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_DFC1"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/DFC1"
+        app:layout_constraintStart_toStartOf="@id/DFC1"
+        app:layout_constraintEnd_toEndOf="@id/DFC1"
         />
 
     <ImageView
@@ -81,6 +101,16 @@
         app:layout_constraintHorizontal_bias="0.33"
         />
 
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_DFC2"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/DFC2"
+        app:layout_constraintStart_toStartOf="@id/DFC2"
+        app:layout_constraintEnd_toEndOf="@id/DFC2"
+        />
+
     <ImageView
         android:id="@+id/DFD"
         android:layout_width="83dp"
@@ -92,6 +122,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.7"
         app:layout_constraintHorizontal_bias="0.97"
+        />
+
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_DFD"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/DFD"
+        app:layout_constraintStart_toStartOf="@id/DFD"
+        app:layout_constraintEnd_toEndOf="@id/DFD"
         />
 
     <ImageView
@@ -107,6 +147,16 @@
         app:layout_constraintHorizontal_bias="0.03"
         />
 
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_DFI"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/DFI"
+        app:layout_constraintStart_toStartOf="@id/DFI"
+        app:layout_constraintEnd_toEndOf="@id/DFI"
+        />
+
     <ImageView
         android:id="@+id/MC1"
         android:layout_width="83dp"
@@ -118,6 +168,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.52"
         app:layout_constraintHorizontal_bias="0.67"
+        />
+
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_MC1"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/MC1"
+        app:layout_constraintStart_toStartOf="@id/MC1"
+        app:layout_constraintEnd_toEndOf="@id/MC1"
         />
 
     <ImageView
@@ -133,6 +193,16 @@
         app:layout_constraintHorizontal_bias="0.33"
         />
 
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_MC2"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/MC2"
+        app:layout_constraintStart_toStartOf="@id/MC2"
+        app:layout_constraintEnd_toEndOf="@id/MC2"
+        />
+
     <ImageView
         android:id="@+id/MD"
         android:layout_width="83dp"
@@ -144,6 +214,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.46"
         app:layout_constraintHorizontal_bias="0.97"
+        />
+
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_MD"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/MD"
+        app:layout_constraintStart_toStartOf="@id/MD"
+        app:layout_constraintEnd_toEndOf="@id/MD"
         />
 
     <ImageView
@@ -159,6 +239,16 @@
         app:layout_constraintHorizontal_bias="0.03"
         />
 
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_MI"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/MI"
+        app:layout_constraintStart_toStartOf="@id/MI"
+        app:layout_constraintEnd_toEndOf="@id/MI"
+        />
+
     <ImageView
         android:id="@+id/DC1"
         android:layout_width="83dp"
@@ -172,6 +262,16 @@
         app:layout_constraintHorizontal_bias="0.67"
         />
 
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_DC1"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/DC1"
+        app:layout_constraintStart_toStartOf="@id/DC1"
+        app:layout_constraintEnd_toEndOf="@id/DC1"
+        />
+
     <ImageView
         android:id="@+id/DC2_MCO"
         android:layout_width="83dp"
@@ -183,6 +283,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintVertical_bias="0.28"
         app:layout_constraintHorizontal_bias="0.33"
+        />
+
+    <com.example.musclarity.GradientProgressBar
+        android:id="@+id/energy_DC2_MCO"
+        style="?android:attr/progressBarStyleHorizontal"
+        android:layout_width="65dp"
+        android:layout_height="10dp"
+        app:layout_constraintTop_toBottomOf="@id/DC2_MCO"
+        app:layout_constraintStart_toStartOf="@id/DC2_MCO"
+        app:layout_constraintEnd_toEndOf="@id/DC2_MCO"
         />
 
     <ImageView
