--- a/app/src/main/res/layout/activity_players3.xml
+++ b/app/src/main/res/layout/activity_players3.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/my_background7"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="0dp" />
+        tools:layout_editor_absoluteY="-109dp" />
 
     <ImageView
         android:id="@+id/back_button"
@@ -87,44 +87,28 @@
         app:layout_constraintTop_toBottomOf="@id/player_name" />
 
     <Button
-        android:id="@+id/delete_button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="start"
-        android:layout_marginEnd="20dp"
-        android:layout_marginTop="24dp"
-        android:backgroundTint="@color/logoColor"
-        android:enabled="true"
-        android:fontFamily="@font/montserrat"
-        android:text="Delete"
-        android:textColor="@color/myBackgroundColor"
-        android:textSize="18sp"
-        app:layout_constraintEnd_toStartOf="@id/add_button"
-        app:layout_constraintTop_toBottomOf="@id/player_img_input" />
-
-    <Button
         android:id="@+id/add_button"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="152dp"
         android:backgroundTint="@color/logoColor"
         android:enabled="true"
         android:fontFamily="@font/montserrat"
         android:text="Add"
         android:textColor="@color/myBackgroundColor"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/player_img_input"
         app:layout_constraintEnd_toEndOf="parent"
-        />
+        app:layout_constraintHorizontal_bias="0.546"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player_img_input" />
 
     <Button
         android:id="@+id/edit_button"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginTop="24dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="152dp"
         android:backgroundTint="@color/logoColor"
         android:enabled="true"
         android:fontFamily="@font/montserrat"
@@ -132,6 +116,22 @@
         android:textColor="@color/myBackgroundColor"
         android:textSize="18sp"
         app:layout_constraintStart_toEndOf="@id/add_button"
+        app:layout_constraintTop_toBottomOf="@id/player_img_input" />
+
+    <Button
+        android:id="@+id/delete_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:layout_marginTop="152dp"
+        android:layout_marginEnd="44dp"
+        android:backgroundTint="@color/logoColor"
+        android:enabled="true"
+        android:fontFamily="@font/montserrat"
+        android:text="Delete"
+        android:textColor="@color/myBackgroundColor"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toStartOf="@id/add_button"
         app:layout_constraintTop_toBottomOf="@id/player_img_input" />
 
     <ImageView
@@ -184,6 +184,16 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/Logo"
         tools:srcCompat="@tools:sample/avatars" />
+
+    <Button
+        android:id="@+id/joseboton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Button"
+        app:layout_constraintBottom_toTopOf="@+id/add_button"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/player_img_input" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
