--- a/app/src/main/res/layout/activity_players3.xml
+++ b/app/src/main/res/layout/activity_players3.xml
@@ -14,7 +14,7 @@
         android:layout_height="match_parent"
         android:background="@drawable/my_background7"
         tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="-109dp" />
+        tools:layout_editor_absoluteY="0dp" />
 
     <ImageView
         android:id="@+id/back_button"
@@ -97,17 +97,19 @@
         android:text="Add"
         android:textColor="@color/myBackgroundColor"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.546"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/player_img_input" />
+        app:layout_constraintTop_toBottomOf="@id/player_img_input"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/edit_button"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
-        android:layout_marginStart="44dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="152dp"
         android:backgroundTint="@color/logoColor"
         android:enabled="true"
@@ -115,8 +117,12 @@
         android:text="Save"
         android:textColor="@color/myBackgroundColor"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.218"
         app:layout_constraintStart_toEndOf="@id/add_button"
-        app:layout_constraintTop_toBottomOf="@id/player_img_input" />
+        app:layout_constraintTop_toBottomOf="@id/player_img_input"
+        app:layout_constraintVertical_bias="0.0" />
 
     <Button
         android:id="@+id/delete_button"
@@ -124,15 +130,19 @@
         android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:layout_marginTop="152dp"
-        android:layout_marginEnd="44dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/logoColor"
         android:enabled="true"
         android:fontFamily="@font/montserrat"
         android:text="Delete"
         android:textColor="@color/myBackgroundColor"
         android:textSize="18sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/add_button"
-        app:layout_constraintTop_toBottomOf="@id/player_img_input" />
+        app:layout_constraintHorizontal_bias="0.45"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/player_img_input"
+        app:layout_constraintVertical_bias="0.009" />
 
     <ImageView
         android:id="@+id/player_img"
