--- a/app/src/main/res/layout/calibration_activity.xml
+++ b/app/src/main/res/layout/calibration_activity.xml
@@ -9,22 +9,10 @@
     android:background="@drawable/futbolpitch2">
 
     <TextView
-        android:id="@+id/instructions_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="22sp"
-        android:textColor="@android:color/white"
-        android:gravity="center"
-        android:elevation="5dp"
-        android:fontFamily="@font/montserrat"
-        app:layout_constraintTop_toBottomOf="@id/logo"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
-    <TextView
         android:id="@+id/textView3"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginBottom="16dp"
         android:background="@drawable/my_background7"
         app:layout_constraintBottom_toBottomOf="parent"
         tools:layout_editor_absoluteX="0dp" />
@@ -56,21 +44,37 @@
         app:layout_constraintTop_toTopOf="@id/logo"
         app:layout_constraintBottom_toBottomOf="@id/logo"/>
 
+    <TextView
+        android:id="@+id/instructions_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:elevation="5dp"
+        android:fontFamily="@font/montserrat"
+        android:gravity="center"
+        android:padding="5dp"
+        android:textColor="@color/white"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/logo" />
 
     <Button
         android:id="@+id/button_toggle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Iniciar Calibración"
+        android:layout_gravity="start"
+        android:layout_marginTop="40dp"
+        android:backgroundTint="@color/logoColor"
+        android:fontFamily="@font/montserrat"
+        android:text="Calibrate"
         android:textColor="@color/myBackgroundColor"
-        android:textSize="12sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/instructions_text"
-        />
-
-
+        app:layout_constraintTop_toBottomOf="@id/instructions_text" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
